phpAdsNew - ChangeLog
 v 1.8.1 - 08/01/2001	+ Updated banner acl screen (Martin Braun)
			+ Added language files with help for banner acl (Martin Braun)
 v 1.8.0 - 06/01/2001	+ Added expiration stats on credit stats and client stats (Martin Braun)
                        + Added weekly stats - needs serious optimizing (Martin Braun)
                        + Added anti-cache feature (Martin Braun)
			+ All files have new indents to make viewing and developing easier. Read DEVELOPERS for more info.
			+ sphourly.php changed to reflect changes in weeklystats (Martin Braun)
			+ Updated documentation.html with explanation about remotehtmlview (me)
			+ Bugfix: kcsm.php had 2 quotes missing and 1 too many (me)
			+ Bugfix: client.php now has client-side JavaScript to detect bad entries in views/clicks/daysleft (me)
			+ Bugfix: mail.php doesn't deactive clients anymore (sypplie)
			+ Bugfix: Authentication required for detailstats now. (me)
			+ Bugfix: forgot banner in creditstats.php. HTML-banners will show now. (me)
                        + Bugfix: several smaller bugs fixed.
 v 1.7.1 - 18/12/2000  + Bugfix: login box only appears once now
 v 1.7.0 - 17/12/2000  + Fixed a problem for Windows users with banneradd.php
                       + GIF/PNG support automatically detected (first contribution of Phil)
                       + Clients now have logout function
                       + When logging in, user is first logged out
                       + Added remote HTML banners through JavaScript
                       + Credit Statistics now sorted by letter. 1 screen per letter.
                       + Bugfix: Previous is now shown in the creditstats screen
                       + Bugfix: images without links patch applied (thanks wesku)
                       + Bugfix: fixed a problem with creditstats showing wrong number of clicks
                       + Bugfix: clients can get expire date again
                       + Bugfix: typo in admin.php