@@ -25,7 +25,7 @@ h3 {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 10pt}
           <td> 
             <p><b>phpAdsNew is a banner management and tracking system written in 
               PHP.<br>
-              </b>Homepage: <a href="http://www.sourceforge.net/projects/phpAdsNew/">http://www.sourceforge.net/projects/phpAdsNew/</a></p>
+              </b>Homepage: <a href="http://www.sourceforge.net/projects/phpadsnew/">http://www.sourceforge.net/projects/phpadsnew/</a></p>
             <h2>General Information</h2>
             <p>Please read the INSTALL file for installation instructions.</p>
             <p>phpAds is split into three parts:</p>
